<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jamen.chen.bigchat.MainActivity" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/actionbar_search_icon"
        android:actionViewClass="android.widget.SearchView"
        android:title="@string/action_bar_search"
        android:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/menu_group_chat"
        android:icon="@drawable/menu_group_chat_icon"
        android:title="@string/menu_group_chat"/>
    <item
        android:id="@+id/menu_add_friend"
        android:icon="@drawable/menu_add_icon"
        android:title="@string/menu_add_friend"/>
    <item
        android:id="@+id/menu_scan"
        android:icon="@drawable/men_scan_icon"
        android:title="@string/menu_scan"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/menu_feedback_icon"
        android:title="@string/menu_help"/>

</menu>